# annotatorplugin_mxnet_ssd

./: .gitmodules  CMakeLists.txt  Findmxnet.cmake  README.md  ssd.cpp  ssd.h  ssd.json  widget.cpp  widget.ui
src/: detector.cpp  detector.hpp  ssd.cpp  ssd.h  ssd.json  widget.cpp  widget.h  widget.ui
